# kakarayan

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
corpus/: models.py  urls.py
corpus/ingestion/: loader.py  normalize.py  parse.py  seed.py
corpus/management/commands/: ingest_corpus.py  seed_reference.py
corpus/migrations/: 0001_extensions.py  0002_initial.py  0003_alter_text_audio_mode.py  0004_remove_text_uniq_text_per_corpus_and_more.py
corpus/static/corpus/css/: components.css  tokens.css
corpus/templates/corpus/: base.html
corpus/templates/corpus/dictionary/: _card_concordance.html  _card_dict.html  _card_dict_expanded.html  _card_meaning.html  _empty.html  _pagination.html  _results.html  index.html
corpus/templatetags/: search_extras.py
corpus/tests/: conftest.py  test_i18n.py  test_normalize.py  test_search.py  test_templatetags.py  test_views.py
corpus/views/: dictionary.py
locale/en/LC_MESSAGES/: django.po
locale/zh_Hant/LC_MESSAGES/: django.mo  django.po
