[project]
name = "kakarayan"
version = "0.1.0"
description = "Web application exposing the FormosanBank corpus. Milestone 1: corpus ingestion into PostgreSQL."
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "django>=5.1,<5.2",
    "psycopg[binary]>=3.2",
    "lxml>=5.0",
    "django-environ>=0.11",
    "django-htmx>=1.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.9",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_test.py"]
