[project]
name = "kakarayan"
version = "0.1.0"
description = "Web application exposing the FormosanBank corpus. Milestone 1: corpus ingestion into PostgreSQL."
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "django>=5.1,<5.2",
    "psycopg[binary]>=3.2",
    "lxml>=5.0",
    "django-environ>=0.11",
    "django-htmx>=1.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.9",
    "pytest-cov>=6.0",
    "ruff>=0.9,<0.15",
    "mypy>=1.13",
    "django-stubs[compatible-mypy]>=5.1",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_test.py"]
addopts = "--cov=corpus --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = ["corpus/migrations/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade (modernise syntax for py313)
    "B",   # flake8-bugbear (likely bugs / bad practices)
]
ignore = [
    "B008",  # function calls in default args — Django's forms/models do this intentionally
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = "corpus.ingestion.*"
disallow_untyped_defs = false

[tool.django-stubs]
django_settings_module = "config.settings"
